@startuml

Title Diagrama: Escuela y Asignaciones

class Escuela{
	 CANTIDAD_ASIGNACIONES_DEFAULT : int
	 
	 -nombreEscuela : String
	 -asignaciones : Asignacion[]
	 	 
	 +agregarAsignacion()
	 +mostrarAsignaciones()
}


class Asignacion{
	 -CANTIDAD_NOTAS_DEFAULT : int
	 
	 -Materia materia
	 -alumno : Alumno
	 -notas : Nota[]

	 +asignarNotas(Nota[] notas)
	 +promediarNotas() : Double
	 +estadoMateria(Nota[] notas) : String
	 +mostrarNotas() : String
}

class Nota{
	-valorNota : Double 
	-tipoNota : String
}


class Alumno{
	-nombre : String
	-edad : int
}


class Materia{
	-nombreMateria : String
	-cuantrimestre : String 
}


Escuela "1" -right-> "1..*" Asignacion : Tiene una o muchas
Asignacion "1" -right-> "1..*" Alumno : Tiene uno
Asignacion "1" -down-> "1..*" Materia : Tiene una
Nota "1..*" -right-> "1" Materia : Pertenece a
Asignacion "1" --> "1..*" Nota : Tiene una o muchas
Alumno "1"-->"1..*" Materia  : Posee 1 o varias





@enduml